# cv_final

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: design.md  experiments.md  improve.md  pipeline.md  plan.md  report_outline.md
report/: README.md  asset_gap_audit.md  final_report.md  main.tex
report/assets/: gs.csv  metrics_summary.json  vggt_ba.csv
report/metrics/: all_metrics.json  asset_audit.md  ba_metrics.csv  custom_3dgs_metrics.csv  geometry_filter_metrics.csv  official_3dgs_metrics.csv  vggt_metrics.csv
scripts/: View_3dgs.sh  ba_pycolmap.sh  ba_run.sh  final_report_remote_batch.sh  gs_render.sh  gs_train.sh  gs_train_official.sh  report_assets.sh  vggt.sh  vggt_export.py  vggt_export.sh  video_select.sh
src/: __init__.py  vggt_export.py
src/ba/: optimize.py  problem.py  pycolmap_run.py  run.py  synthetic_test.py  utils.py
src/data/: colmap_io.py  mask_filter.py  reconstruction.py
src/gaussian/: model.py  official_train.py  render.py  renderer.py  train.py  trainer.py  viewer.py
src/improvement/: __init__.py  geometry_filter.py  video_select.py
src/tests/: test_ba_synthetic.py  test_colmap_roundtrip.py  test_improvement_filters.py  test_projection.py  test_so3.py
src/tools/: __init__.py  report_assets.py  vis_reconstruction.py
src/utils/: __init__.py  experiment.py
