[project]
name = "cv_final_project"
version = "0.1.0"
description = "VGGT + Bundle Adjustment + 3D Gaussian Splatting pipeline"
requires-python = ">=3.10"
dependencies = [
    # PyTorch ecosystem (CUDA 12.x)
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",

    # Core numeric / image
    "numpy>=1.26,<2",
    "Pillow>=10",
    "opencv-python>=4.8",
    "scipy>=1.10",
    "matplotlib>=3.5",
    "trimesh>=4.0",
    "imageio>=2.30",
    "scikit-image>=0.20",

    # VGGT dependencies
    "huggingface_hub>=0.20",
    "einops>=0.7",
    "safetensors>=0.4",
    "tqdm>=4.65",
    "hydra-core>=1.3",
    "omegaconf>=2.3",

    # COLMAP Python bindings
    "pycolmap==3.10.0",
    "pyceres==2.3",

    # Image / geometry
    "kornia>=0.7",
    "loguru>=0.7",
    "plyfile>=1.0",

    # Web / visualization
    "gradio>=5.0",
    "viser>=0.2",
    "pydantic>=2.10",
    "httpx[socks]>=0.27",
    "fastapi>=0.100",
    "uvicorn>=0.30",

    # 3DGS dependencies
    "gsplat>=1.0",

    # Local feature matching (editable install from packages/LightGlue)
    "lightglue",
]

[[tool.uv.index]]
# PyTorch CUDA 12.8 wheelhouse — overlays PyTorch + proxies PyPI
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
lightglue = { path = "packages/LightGlue", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
